fixing the spacing for larger cards (new default)

--- a/app/assets/stylesheets/cardboard.css.sass
+++ b/app/assets/stylesheets/cardboard.css.sass
@@ -51,7 +51,7 @@ nav
 .box,
 .box-placeholder
   +box-sizing
-  padding: 3px 6px
+  padding: 1ex 1.25ex
   margin: 3px
   border-radius: 3px
 
@@ -64,8 +64,8 @@ nav
   opacity: 1
 
   p
-    line-height: 1.2em
-    margin: 0.4em 0 0
+    line-height: 1.3em
+    margin: 0.6em 0 0
 
     &:first-child
       margin-top: 0
